Created a better tag and theme description. Added Skeleton HTML to the index php page.

--- a/wordpress2016/wp-content/themes/creative-entrepreneur-blog-theme/style.css
+++ b/wordpress2016/wp-content/themes/creative-entrepreneur-blog-theme/style.css
@@ -2,12 +2,7 @@
 Theme Name: Creative Entrepreneur Blog Theme
 Author: Lenora Porter
 Author URI: http://www.lenoraporter.com
-Description: The Creative Entrepreneur Blog theme for Wordpress
-was designed for multi-passionate side hustlers with a need to
-write and highlight their work.
+Description: The Creative Entrepreneur Blog theme for Wordpress was designed for multi-passionate side hustlers with a need to write and highlight their work. The theme starts with a vibrant hero image, about section, subscribe button, latest post and portfolio custom-grid. There is also a beautiful blog page equipped with all the bells and whistles to make sure you are seen as an expert in your industry.
 Version: 1
-Tags: portfolio, sticky-heaader, entrepreneur, responsive, mobile,
- creative, tech, artist, photographer, tattoo artist, multi-column,
- bootstrap, engineer, search-engine-friendly, SEO, developer, coder, custom-menu,
- multi-color, custom-colors, customizable colors, right-sidebar
+Tags: portfolio, sticky-heaader, entrepreneur, responsive, mobile, creative, tech, artist, photographer, tattoo artist, multi-column, bootstrap, engineer, search-engine-friendly, SEO, developer, coder, custom-menu, multi-color, custom-colors, customizable colors, right-sidebar
 */
